Changes since 8.0.0

    - Added "Quit KeyRemap4MacBook" into menu bar.
    - Added KeyCode::VK_OPEN_URL_*.
    - Added Option::POINTINGRELATIVETOSCROLL_TOKEYS.
    - Added __FlipScrollWheel__.
    - Some minor improvements.

----------------------------------------------------------------------
= version 8.0.0 =

    - Changed Preferences location.
      http://pqrs.org/macosx/keyremap4macbook/document.html
    - Changed KeyRemap4MacBook_cli location.
      http://pqrs.org/macosx/keyremap4macbook/document-misc.html#commandlineinterface
    - Integrated a status message indicator. (Removed Growl support.)
    - Dynamic VK_CHANGE_INPUTSOURCE definition feature has been added.
    - Dynamic <inputsource_only> definition feature has been added.
    - Changed --KeyToKey-- to __KeyToKey__ at <autogen>.
    - Added a preference of ignored area into "multi-touch extension".
    - Added Option::SIMULTANEOUSKEYPRESSES_STRICT_KEY_ORDER.
    - Added DeviceLocation into <device_only>, <device_not> filters.
    - Some minor improvements.

----------------------------------------------------------------------
= version 7.8.0 =

    - Fixed a bug that private.xml does not work properly if <identifier> contains white space.
    - Fixed a bug that "General > Don't restore modifiers in the mouse event" does not work properly.
    - Some minor improvements.

----------------------------------------------------------------------
= version 7.7.0 =
    - Fixed a bug introduced in version 7.6.0 that detecting of Input Sources does not work properly in Japanese and some other languages.

----------------------------------------------------------------------
= version 7.6.0 =
    - Added <replacementdef>. You can replace preset settings behavior by this.
    - Added <include>. You can load xml files in private.xml.
    - Added --ScrollWheelToKey--.
    - Added --ScrollWheelToScrollWheel--.
    - Added KeyCode::VK_WAIT_*.
    - Improved KeyCode::VK_CHANGE_INPUTMODE_* behavior.